<resources>
    <string name="app_name" translatable="false">Kinema</string>
    <!-- Strings used for fragments for navigation -->
    <string name="movie_fragment_label" translatable="false">Movie Fragment</string>
    <string name="details_movie_fragment_label" translatable="false">Movie Details Fragment</string>
    <string name="filter_fragment_label" translatable="false">fragment_filter</string>
    <string name="watchlist_fragment_label" translatable="false">fragment_watchlist</string>

    <!--    Material transitions names-->
    <string name="movie_item_transition_name" translatable="false">movie_item_%1$s_%2$s</string>
    <string name="watchlist_item_transition_name" translatable="false">watchlist_item_%1$s_%2$s</string>
    <string name="location_transition_name" translatable="false">location_item_%1$s</string>
    <string name="movie_detail_transition_name" translatable="false">movie_detail_transition_name</string>

    <string name="movie_duration" translatable="false">%1$s mins</string>
    <string name="distance_description" translatable="false">(%1$s m)</string>
    <string name="distance_description_km" translatable="false">(%1$s km)</string>
<!--    <string name="city_format_toolbar" translatable="false">%1$s</string>-->

    <string name="retry">Retry</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="a11y_movie_avatar">Movie Avatar</string>

    <string name="description_text_collapsed">More</string> <!-- more -->
    <string name="description_text_expanded">Less</string> <!-- less -->
    <string name="where_to_watch">Watch it here</string>
    <string name="menu_item_sort_movies">Sort movies alphabetically</string>
    <string name="menu_item_filter">Filter</string>
    <string name="menu_item_home">Home</string>
    <string name="menu_item_watchlist">Watchlist</string>
    <string name="movie_details_title">Details</string>
    <string name="filter_title">Filter</string>
    <string name="watchlist_title">Watchlist</string>
    <string name="menu_item_sort_watchlist">Sort Watchlist</string>
    <string name="today">Today</string>
    <string name="empty_description">No description provided.</string>
    <string name="empty_movie_list">No movies found for this specific date yet.</string>
    <string name="empty_watch_movie_list">No movies added to the WatchList.</string>
    <string name="filter_attribute_city">City</string>
    <string name="filter_attribute_cinemas">Cinemas</string>
    <string name="filter_attribute_languages">Languages</string>
    <string name="select_all">Select All</string>
    <string name="watchlist_added">Added</string>
    <string name="movie_home" translatable="false">MovieHomeDest</string>
    <string name="filter_home" translatable="false">FilterHomeDest</string>
    <string name="watchlist_home" translatable="false">WatchlistHomeDest</string>

</resources>